k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: streamlitweb
 annotations:
   kubernetes.io/ingress.global-static-ip-name: streamlitweb-ip
   networking.gke.io/managed-certificates: streamlit-certificate
 labels:
   app: streamlit
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: streamlitweb-backend
            port:
              number: 8501

---
apiVersion: v1
kind: Service
metadata:
 name: streamlitweb-backend
 labels:
   app: streamlit
spec:
 type: NodePort
 selector:
   app: streamlit
   tier: web
 ports:
 - port: 8501
   targetPort: 8501
